Fix placeholder jumping & remove green selected border

--- a/src/index.css
+++ b/src/index.css
@@ -118,8 +118,7 @@ h2[data-placeholder]:before {
 }
 
 .checklist-item[selected=true] {
-  padding-left: 18px;
-  border-left: 2px solid #16621B;
+  padding-left: 20px;
 }
 
 .item-toggle {
